--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>algoVisualizer</title>
   </head>
   <body>
@@ -31,10 +31,10 @@
       <div class="bars"></div>
     </main>
     
-    <script src="/script/bubble.js" defer></script>
-    <script src="/script/range.js" defer></script>
+    <script src="script/bubble.js" defer></script>
+    <script src="script/range.js" defer></script>
     
-    <script src="/script/randomize.js" defer></script>
-    <script src="/script/script.js" defer></script>
+    <script src="script/randomize.js" defer></script>
+    <script src="script/script.js" defer></script>
   </body>
 </html>
