--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <h1>Visualizer</h1>
         <div class="right">
-            <input type="range" id="range" step="1" min="2">
+            <input type="range" id="range" value="295" step="1" min="2" max="295">
             <select name="choose" id="sorts">
             <option class="opt" value="bubble">Bubble</option>
             <option class="opt" value="bubble">Selection</option>
