--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <script src="script/bubble.js" defer></script>
     <script src="script/range.js" defer></script>
-
+    <script src="script/selection.js"></script>
     <script src="script/randomize.js" defer></script>
     <script src="script/script.js" defer></script>
   </body>
